--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cv"
+    style="@style/CardView.Dark"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/cv">
+    android:clickable="false"
+    app:cardBackgroundColor="#333333">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -11,31 +15,37 @@
         android:padding="16dp">
 
         <TextView
+            android:id="@+id/titleText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:text="Mathematik"
-            android:id="@+id/titleText"/>
+            android:textColor="@color/colorAccent"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/dateText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/titleText"
             android:text="09:00 - 11:00 am 13.12.2017"
-            android:id="@+id/dateText"/>
+            android:textColor="@color/cardview_light_background"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/roomText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/dateText"
             android:text="RB41-22"
-            android:id="@+id/roomText"/>
+            android:textColor="@color/cardview_light_background" />
 
         <TextView
+            android:id="@+id/lecturerText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/roomText"
             android:text="Heinz Günther"
-            android:id="@+id/lecturerText"/>
+            android:textColor="@color/cardview_light_background" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
