refactor the whole code

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,5 +4,5 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="de.gregoryseibert.vorlesungsplandhbw.SettingsActivity">
+    tools:context="de.gregoryseibert.vorlesungsplandhbw.view.activity.SettingsActivity">
 </android.support.constraint.ConstraintLayout>
