--- a/app/src/main/res/layout/item_week.xml
+++ b/app/src/main/res/layout/item_week.xml
@@ -22,7 +22,7 @@
 
             <TextView
                 android:id="@+id/dayText"
-                android:layout_width="wrap_content"
+                android:layout_width="96dp"
                 android:layout_height="wrap_content"
                 android:padding="8dp"
                 android:text="Mo., 14.11."
