--- a/app/src/main/res/layout/item_week_day.xml
+++ b/app/src/main/res/layout/item_week_day.xml
@@ -4,8 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="?attr/colorAccent"
-    android:padding="8dp"
-    android:layout_marginEnd="8dp">
+    android:padding="8dp">
 
     <TextView
         android:id="@+id/timeText"
