--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,6 @@
 <resources>
     <color name="colorPrimary">#3f51b5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#ffca28</color>
+    <color name="colorAccent">#c0ca33</color>
+    <color name="date_bar_background">#eee</color>
 </resources>
