--- a/app/src/main/res/layout/event_week_list.xml
+++ b/app/src/main/res/layout/event_week_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF">
@@ -14,4 +14,4 @@
         android:orientation="vertical"
         android:padding="4dp">
     </LinearLayout>
-</RelativeLayout>
+</ScrollView>
