--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,8 @@
             android:elevation="4dp"
             android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:layout_scrollFlags="scroll|enterAlways"/>
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:titleTextColor="@color/colorPrimaryText" />
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabLayout"
@@ -56,10 +57,10 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/date_bar_background"
+        android:layout_alignParentBottom="true"
+        android:background="@color/colorPrimary"
         android:orientation="horizontal"
-        android:padding="8dp"
-        android:layout_alignParentBottom="true">
+        android:padding="8dp">
 
         <ImageButton
             android:id="@+id/calendarButton"
@@ -79,6 +80,7 @@
             android:layout_weight="1"
             android:text="13.11.2017"
             android:textAlignment="center"
+            android:textColor="@color/colorPrimaryText"
             android:textSize="18sp"
             android:textStyle="bold" />
 
