--- a/app/src/main/res/layout/event_day_list.xml
+++ b/app/src/main/res/layout/event_day_list.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF">
+    android:background="@color/colorBackground">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
@@ -11,6 +10,5 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:layout_marginTop="8dp"
-        android:padding="4dp">
-    </android.support.v7.widget.RecyclerView>
+        android:padding="4dp"></android.support.v7.widget.RecyclerView>
 </RelativeLayout>
