--- a/app/src/main/res/layout/event_week_list.xml
+++ b/app/src/main/res/layout/event_week_list.xml
@@ -2,7 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF">
+    android:background="@color/colorBackground">
 
 
     <LinearLayout
@@ -12,6 +12,5 @@
         android:layout_margin="8dp"
         android:layout_marginTop="8dp"
         android:orientation="vertical"
-        android:padding="4dp">
-    </LinearLayout>
+        android:padding="4dp"></LinearLayout>
 </ScrollView>
