--- a/app/src/main/res/layout/item_day.xml
+++ b/app/src/main/res/layout/item_day.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cv"
     style="@style/CardView.Dark"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="false"
-    app:cardBackgroundColor="#333333">
+    app:cardBackgroundColor="@color/colorCardBackground">
 
 
     <LinearLayout
@@ -27,7 +26,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:text="09:00 - 11:30"
-                android:textColor="#FFF"
+                android:textColor="@color/colorAccentText"
                 android:textStyle="bold" />
         </RelativeLayout>
 
@@ -43,7 +42,7 @@
                 android:layout_height="wrap_content"
                 android:paddingBottom="4dp"
                 android:text="Mathematik"
-                android:textColor="#FFF"
+                android:textColor="@color/colorCardText"
                 android:textStyle="bold" />
 
             <TextView
@@ -52,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:paddingTop="4dp"
                 android:text="RB4444"
-                android:textColor="#FFF"
+                android:textColor="@color/colorCardText"
                 android:textStyle="bold" />
         </LinearLayout>
 
