--- a/app/src/main/res/layout/event_day_list.xml
+++ b/app/src/main/res/layout/event_day_list.xml
@@ -10,5 +10,6 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:layout_marginTop="8dp"
-        android:padding="4dp"></android.support.v7.widget.RecyclerView>
+        android:padding="4dp">
+    </android.support.v7.widget.RecyclerView>
 </RelativeLayout>
