--- a/app/src/main/res/layout/event_week_list.xml
+++ b/app/src/main/res/layout/event_week_list.xml
@@ -4,7 +4,6 @@
     android:layout_height="match_parent"
     android:background="@color/colorBackground">
 
-
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
@@ -12,5 +11,6 @@
         android:layout_margin="8dp"
         android:layout_marginTop="8dp"
         android:orientation="vertical"
-        android:padding="4dp"></LinearLayout>
+        android:padding="4dp">
+    </LinearLayout>
 </ScrollView>
