--- a/app/src/main/res/layout/event_day_list.xml
+++ b/app/src/main/res/layout/event_day_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground">
@@ -7,9 +7,5 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:layout_marginTop="8dp"
-        android:padding="4dp">
-    </android.support.v7.widget.RecyclerView>
-</RelativeLayout>
+        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+</ScrollView>
