--- a/app/src/main/res/layout/event_week_list.xml
+++ b/app/src/main/res/layout/event_week_list.xml
@@ -8,9 +8,6 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:layout_marginTop="8dp"
-        android:orientation="vertical"
-        android:padding="4dp">
+        android:orientation="vertical">
     </LinearLayout>
 </ScrollView>
