--- a/app/src/main/res/layout/item_day.xml
+++ b/app/src/main/res/layout/item_day.xml
@@ -1,59 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/cv"
-    style="@style/CardView.Dark"
-    android:layout_width="match_parent"
+<LinearLayout android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:clickable="false"
-    app:cardBackgroundColor="@color/colorCardBackground">
+    android:orientation="horizontal"
+    android:padding="@dimen/item_offset"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <TextView
+        android:id="@+id/timeText"
+        android:layout_width="108dp"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/item_offset"
+        android:text="09:00 - 11:30"
+        android:textColor="@color/colorAccentText"
+        android:textStyle="bold" />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:background="@color/colorDividerNormal" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="@dimen/item_offset">
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:background="@color/colorAccent"
-            android:padding="8dp">
-
-            <TextView
-                android:id="@+id/timeText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="09:00 - 11:30"
-                android:textColor="@color/colorAccentText"
-                android:textStyle="bold" />
-        </RelativeLayout>
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/titleText"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:padding="8dp">
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginBottom="@dimen/item_offset"
+            android:text="Mathematik"
+            android:textColor="@color/colorAccentText"
+            android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/titleText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingBottom="4dp"
-                android:text="Mathematik"
-                android:textColor="@color/colorCardText"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/roomText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingTop="4dp"
-                android:text="RB4444"
-                android:textColor="@color/colorCardText"
-                android:textStyle="bold" />
-        </LinearLayout>
-
+        <TextView
+            android:id="@+id/roomText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/item_offset"
+            android:text="RB4444"
+            android:textColor="@color/colorCardText"
+            android:textStyle="bold" />
     </LinearLayout>
-</android.support.v7.widget.CardView>
+</LinearLayout>
