--- a/app/src/main/res/layout/item_week_day.xml
+++ b/app/src/main/res/layout/item_week_day.xml
@@ -1,17 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/colorAccent"
-    android:padding="8dp">
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/timeText"
-        android:layout_width="wrap_content"
+        android:layout_width="108dp"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:padding="@dimen/item_offset"
         android:text="09:00 - 11:30"
         android:textColor="@color/colorAccentText"
         android:textStyle="bold" />
-</RelativeLayout>
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:background="@color/colorDividerNormal" />
+
+    <TextView
+        android:id="@+id/titleText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:padding="@dimen/item_offset"
+        android:text="Mathematik"
+        android:textColor="@color/colorAccentText"
+        android:textStyle="bold" />
+</LinearLayout>
