--- a/app/src/main/res/layout/item_day.xml
+++ b/app/src/main/res/layout/item_day.xml
@@ -1,31 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorCardBackground"
-    android:orientation="horizontal"
-    android:padding="@dimen/item_offset">
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/timeText"
         android:layout_width="108dp"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/item_offset"
         android:padding="@dimen/item_offset"
         android:text="09:00 - 11:30"
         android:textColor="@color/colorAccentText"
         android:textStyle="bold" />
 
-    <View
-        android:id="@+id/divider"
-        android:layout_width="1dp"
-        android:layout_height="match_parent"
-        android:background="@color/colorDividerNormal" />
+    <RelativeLayout
+        android:id="@+id/dividerLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent">
+
+        <View
+            android:id="@+id/divider"
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:background="@color/colorDividerNormal" />
+
+        <ImageView
+            android:id="@+id/timelineCircle"
+            android:layout_width="8dp"
+            android:layout_height="8dp"
+            android:layout_marginTop="22dp"
+            android:scaleType="fitXY"
+            app:srcCompat="@drawable/timeline_circle" />
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="@dimen/item_offset">
+        android:layout_margin="@dimen/item_offset"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/titleText"
@@ -33,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginBottom="@dimen/item_offset"
+            android:padding="@dimen/item_offset"
             android:text="Mathematik"
             android:textColor="@color/colorAccentText"
             android:textStyle="bold" />
@@ -42,7 +58,7 @@
             android:id="@+id/roomText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/item_offset"
+            android:padding="@dimen/item_offset"
             android:text="RB4444"
             android:textColor="@color/colorCardText"
             android:textStyle="bold" />
