--- a/app/src/main/res/layout/item_week_day.xml
+++ b/app/src/main/res/layout/item_week_day.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal">
 
     <TextView
@@ -13,11 +14,26 @@
         android:textColor="@color/colorAccentText"
         android:textStyle="bold" />
 
-    <View
-        android:id="@+id/divider"
-        android:layout_width="1dp"
-        android:layout_height="match_parent"
-        android:background="@color/colorDividerNormal" />
+    <RelativeLayout
+        android:id="@+id/dividerLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <View
+            android:id="@+id/divider"
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:background="@color/colorDividerNormal" />
+
+        <ImageView
+            android:id="@+id/timelineCircle"
+            app:srcCompat="@drawable/timeline_circle"
+            android:layout_width="8dp"
+            android:layout_height="8dp"
+            android:layout_marginTop="14dp"
+            android:scaleType="fitXY" />
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/titleText"
