--- a/app/src/main/res/layout/item_week.xml
+++ b/app/src/main/res/layout/item_week.xml
@@ -4,8 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/week_container"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/colorCardBackground">
+    android:layout_height="wrap_content">
 
     <RelativeLayout
         android:id="@+id/week_container_top"
@@ -22,7 +21,6 @@
             android:paddingEnd="@dimen/item_offset"
             android:paddingTop="@dimen/item_offset"
             android:text="Montag"
-            android:textColor="@color/colorCardText"
             android:textStyle="bold" />
 
         <TextView
@@ -35,7 +33,6 @@
             android:gravity="center"
             android:text="99"
             android:textAlignment="center"
-            android:textColor="@color/colorCardBackground"
             android:textStyle="bold" />
 
         <ToggleButton
@@ -56,15 +53,14 @@
         android:id="@+id/week_container_bottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/week_container_top"
-        android:background="@color/colorCardBackgroundIndent">
+        android:layout_below="@+id/week_container_top">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/item_offset"
-            app:reverseLayout="false"></android.support.v7.widget.RecyclerView>
+            app:reverseLayout="false">
+        </android.support.v7.widget.RecyclerView>
     </FrameLayout>
-
 </RelativeLayout>
