--- a/app/src/main/res/layout/item_week_day.xml
+++ b/app/src/main/res/layout/item_week_day.xml
@@ -11,7 +11,6 @@
         android:layout_height="wrap_content"
         android:padding="@dimen/item_offset"
         android:text="09:00 - 11:30"
-        android:textColor="@color/colorAccentText"
         android:textStyle="bold" />
 
     <RelativeLayout
@@ -24,7 +23,7 @@
             android:layout_width="1dp"
             android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
-            android:background="@color/colorDividerNormal" />
+            android:background="#FFFFFF" />
 
         <ImageView
             android:id="@+id/timelineCircle"
@@ -39,10 +38,7 @@
         android:id="@+id/titleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:padding="@dimen/item_offset"
         android:text="Mathematik"
-        android:textColor="@color/colorAccentText"
         android:textStyle="bold" />
 </LinearLayout>
