--- a/app/src/main/res/layout/item_day.xml
+++ b/app/src/main/res/layout/item_day.xml
@@ -1,60 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:layout_margin="@dimen/item_offset"
+    android:layout_marginBottom="8dp">
 
-    <TextView
-        android:id="@+id/timeText"
-        android:layout_width="108dp"
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/item_offset"
-        android:padding="@dimen/item_offset"
-        android:text="09:00 - 11:30"
-        android:textStyle="bold" />
+        android:padding="@dimen/item_offset">
 
-    <RelativeLayout
-        android:id="@+id/dividerLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/timeTextStart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="09:00"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/timeTextEnd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="11:30"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/timeTextStart" />
 
         <View
             android:id="@+id/divider"
             android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:layout_centerHorizontal="true"
-            android:background="#FFFFFF" />
-
-        <ImageView
-            android:id="@+id/timelineCircle"
-            android:layout_width="8dp"
-            android:layout_height="8dp"
-            android:layout_marginTop="22dp"
-            android:scaleType="fitXY"
-            app:srcCompat="@drawable/timeline_circle" />
-    </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/item_offset"
-        android:orientation="vertical">
+            android:layout_height="0dp"
+            android:layout_marginStart="8dp"
+            android:background="@color/cardview_shadow_start_color"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/timeTextStart"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/titleText"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="@dimen/item_offset"
+            android:layout_marginStart="8dp"
             android:text="Mathematik"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/divider"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/roomText"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="@dimen/item_offset"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:text="RB4444"
-            android:textStyle="bold" />
-    </LinearLayout>
-</LinearLayout>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/divider"
+            app:layout_constraintTop_toBottomOf="@+id/titleText" />
+
+    </android.support.constraint.ConstraintLayout>
+</android.support.v7.widget.CardView>
