--- a/app/src/main/res/layout/item_week_day.xml
+++ b/app/src/main/res/layout/item_week_day.xml
@@ -6,7 +6,7 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/timeText"
+        android:id="@+id/timeTextStart"
         android:layout_width="108dp"
         android:layout_height="wrap_content"
         android:padding="@dimen/item_offset"
